# cookiecutter-openapi-fastapi-mongo

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
website/: package.json
website/public/: index.html
{{cookiecutter.project_dir_name}}/: .env.example  .gitignore  .openapi-generator-ignore  Makefile  docker-compose.yaml  pyproject.toml  start.ps1  start.sh
{{cookiecutter.project_dir_name}}/libs/mongodb/: client.py  collections.py  databases.py  odm.py
{{cookiecutter.project_dir_name}}/openapi/: generate.ps1  generate.sh
{{cookiecutter.project_dir_name}}/openapi/{{cookiecutter.service_name}}/: openapi.yaml
{{cookiecutter.project_dir_name}}/services/{{cookiecutter.service_name}}/: Dockerfile  main.py
{{cookiecutter.project_dir_name}}/services/{{cookiecutter.service_name}}/api/: __init__.py  user_api.py
{{cookiecutter.project_dir_name}}/services/{{cookiecutter.service_name}}/conf/: settings.py
